Fixed overlapping footer with small height

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2502,11 +2502,17 @@
 	#footer {
 		bottom: 0;
 		left: 0;
-		padding: 0 4em 6em 0;
+		padding: 0 1em 1em 1em;
 		position: fixed;
-		text-align: right;
 		width: 35%;
 	}
+
+@media(min-height: 763px) {
+	#footer {
+		padding: 0 4em 5em 0;
+		text-align: right;
+	}
+}
 
 		#footer .icons {
 			margin: 1em 0 0 0;
@@ -3086,7 +3092,7 @@
 		/* Header */
 
 			#header {
-				padding: 4.5em 1.5em;
+				padding: 1.5em 1em;
 			}
 
 				#header h1 br {
@@ -3160,4 +3166,5 @@
     background: url(/images/mailbox.jpg) no-repeat;
     min-height: 250px;
     background-size: cover;
+    margin-bottom: 1em;
 }
